fix(ui/src/app/applications/components/application-pod-view/pod-view.scss): make sure overflow doesn't break the node labels design

--- a/ui/src/app/applications/components/application-pod-view/pod-view.scss
+++ b/ui/src/app/applications/components/application-pod-view/pod-view.scss
@@ -82,6 +82,7 @@ $pod-age-icon-clr: #ffce25;
             background-color: $argo-color-gray-3;
             color: $argo-color-gray-6;
             max-height: 100px;
+            overflow: auto;
             div {
                 display: flex;
                 white-space: nowrap;
